second update about to send. finish open statement

--- a/index.html
+++ b/index.html
@@ -24,26 +24,33 @@
             <div class="dropdown">
               <li class="first"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">fancamp</a></li>
               <div class="dropdown-content one">
-                <p>
-                  I have been a Bandcamp fan since 2010 as it has helped me find new approachable artists that I still listen to today. BadBadNotGood, Mouse On The Keys, Jeff Pianki - The list goes on! As a user, I have happily grown with the changes and improvements that have been made over time.                   
+                <p class="fp1">
+                  I have been a Bandcamp fan since 2010 as it has helped me find an array of fresh, eclectic, and approachable artists that I still listen to today. BadBadNotGood, Mouse On The Keys, Jeff Pianki - The list goes on!
+                </p>
+                <p class="fp2">
+                  As a user, I have happily grown with the changes and improvements that have been made over time to help discover new artists. 
+                </p>
+                <p class="fp3">
+                  From the artist's perspective, using Bandcamp has been a pleasure from day one. It has always been designed and functioned beautifully. Stellar product.
                 </p>
               </div>
             </div>
 
             <div class="dropdown">
-                <li class="second"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">skills</a></li>
+                <li class="second"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">experience</a></li>
                 <div class="dropdown-content two">
-                  <p>In my previous role I answered 75+ phone calls a day in addition to written correspondences via email and fax. Before that I sold cell phone service to consumers and businesses making sure to keep both my customers and superiors happy.</p>
-                  <p>I'm confident that I have what it takes to live up to what bandcamp users expect. </p>
+                  <p>
+                    In my previous role, I answered 75+ phone calls a day in addition to correspondences crafted specifically and personally via email and fax. Everything from checking a price to investigating missing shipments on behalf of a  customer. I also oversaw the front desk, performing transactions for deliveries and pick-up orders. This helped solidify my ability to multi-task, prioritize, and ultimately make effective decisions rapidly. If being a problem solver was cool, you could consider me Miles Davis.       
+                  </p>
+                  <p>
+                    Before that I sold cell phone service in person to consumers and businesses. Making sure to do right by both my customers and my company was an everlasting challenge that I enjoyed accomplishing.
+                  </p>
+                  <p>I'm confident that my work would live up to what Bandcamp and it's users expect based off of my experience and my own expectations of Bandcamp.</p>
                 </div>
             </div>
 
             <div class="dropdown">
                 <li class="third"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">reason3</a></li>  
-            </div>
-
-            <div class="dropdown">
-              <li class="fourth"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">reason4</a></li>  
             </div>
           </ul>
         </nav>
@@ -57,10 +64,13 @@
     <div class="about">
       <h1>Hello</h1>
       <p>
-        My name is Steve Smith and I built this small website in regards to the support role opportunity at Bandcamp. I use, understand, and absolutely love Bandcamp so I am <span class="thrilled">thrilled</span> to have seen this opportunity arise.
+        My name is Steve Smith. I am a great candidate as your new support person. I built this small website in regards to the support role opportunity. I use, understand, and absolutely love Bandcamp so I am <span class="thrilled">thrilled</span> to have seen this opportunity arise.
       </p> 
       <p>
-        In addition to my senior level experience in customer support, I am also a full stack web developer capable of assisting both customers and team members alike. I care deeply about communication, and I live for those exciting moments of a new musical discovery for not only myself but for everyone around me. Because Bandcamp has brought me to so many of those moments, I would love to be a contributing part of it.
+        From what I understand, the right candidate 
+      </p>
+      <p>
+        In addition to my senior level experience in customer support, I am also a full stack web developer capable of assisting both customers and team members alike. I care deeply about communication, and truly live for those exciting moments of a new musical discovery. Because Bandcamp has brought me<span class="others">(and so many others!) </span>to so many of those moments, I would love to be a contributing part of it.
       </p>      
         <div class="contact" onClick=alertFunc()>        
             <span class="contact-me">contact</span> 
@@ -71,7 +81,9 @@
 </main>
 <script src="./scripts.js"></script>
 <footer>
-  <div class="footer-container"></div>
+  <div class="footer-container">
+      <span class="footer-span">Thanks for your time. <hr/>Steve Smith 2018</span>
+  </div>
 </footer>
 </body>
 </html>
