second to final commit. must fix contact link color-way

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <div class="nav-container">
         <nav class="site-nav">
           <ul>  
-
             <div class="dropdown">
               <li class="first"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">fancamp</a></li>
               <div class="dropdown-content one">
@@ -45,12 +44,18 @@
                   <p>
                     Before that I sold cell phone service in person to consumers and businesses. Making sure to do right by both my customers and my company was an everlasting challenge that I enjoyed accomplishing.
                   </p>
-                  <p>I'm confident that my work would live up to what Bandcamp and it's users expect based off of my experience and my own expectations of Bandcamp.</p>
+                  <p>I'm confident that my work would be valuable to what Bandcamp and it's amazing community of users expect and deserve.</p>
                 </div>
             </div>
 
-            <div class="dropdown">
-                <li class="third"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">reason3</a></li>  
+            <div class="dropdown">          
+                <li class="third"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">contact</a></li>  
+                <div class="dropdown-content three">
+                  <a href="mailto:stevesmithsays@gmail.com" class="contact-link gemail">gmail</a> 
+                  <a href="tel:+8478450219" class="contact-link phone">(847)845-0219</a> 
+                  <a href="https://github.com/stevesmithsays" class="contact-link ghub">github</a>
+                  <a href="https://www.linkedin.com/in/stevesmithdev/" class="contact-link linked">linkedin</a> 
+                </div>
             </div>
           </ul>
         </nav>
@@ -67,7 +72,7 @@
         My name is Steve Smith. I am a great candidate as your new support person. I built this small website in regards to the support role opportunity. I use, understand, and absolutely love Bandcamp so I am <span class="thrilled">thrilled</span> to have seen this opportunity arise.
       </p> 
       <p>
-        From what I understand, the right candidate 
+         Being a problem solver at heart, bridging the gap between problems and progress is what I do. Things break, and I like to fix them. I would be a great fit for this role in that all of my experience is not only relevant but specific to this position.
       </p>
       <p>
         In addition to my senior level experience in customer support, I am also a full stack web developer capable of assisting both customers and team members alike. I care deeply about communication, and truly live for those exciting moments of a new musical discovery. Because Bandcamp has brought me<span class="others">(and so many others!) </span>to so many of those moments, I would love to be a contributing part of it.
