--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="site-nav">
           <ul>  
             <div class="dropdown">
-              <li class="first"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">fancamp</a></li>
+              <li class="first"><a href="/#" class="nav-links">fancamp</a></li>
               <div class="dropdown-content one">
                 <p class="fp1">
                   I have been a Bandcamp fan since 2010 as it has helped me find an array of fresh, eclectic, and approachable artists that I still listen to today. BadBadNotGood, Mouse On The Keys, Jeff Pianki - The list goes on!
@@ -36,7 +36,7 @@
             </div>
 
             <div class="dropdown">
-                <li class="second"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">experience</a></li>
+                <li class="second"><a href="/#" class="nav-links">experience</a></li>
                 <div class="dropdown-content two">
                   <p>
                     In my previous role, I answered 75+ phone calls a day in addition to correspondences crafted specifically and personally via email and fax. Everything from checking a price to investigating missing shipments on behalf of a  customer. I also oversaw the front desk, performing transactions for deliveries and pick-up orders. This helped solidify my ability to multi-task, prioritize, and ultimately make effective decisions rapidly. If being a problem solver was cool, you could consider me Miles Davis.       
@@ -49,12 +49,12 @@
             </div>
 
             <div class="dropdown">          
-                <li class="third"><a href="https://www.youtube.com/watch?v=wJSqB475hOI">contact</a></li>  
+                <li class="third"><a href="/#" class="nav-links">contact</a></li>  
                 <div class="dropdown-content three">
                   <a href="mailto:stevesmithsays@gmail.com" class="contact-link gemail">gmail</a> 
                   <a href="tel:+8478450219" class="contact-link phone">(847)845-0219</a> 
-                  <a href="https://github.com/stevesmithsays" class="contact-link ghub">github</a>
                   <a href="https://www.linkedin.com/in/stevesmithdev/" class="contact-link linked">linkedin</a> 
+                  <a href="https://github.com/stevesmithsays" class="contact-link ghub">github</a>
                 </div>
             </div>
           </ul>
